--- a/_data/people.yml
+++ b/_data/people.yml
@@ -4,6 +4,5 @@ instructors:
     webpage: https://dx-tang.github.io/ 
 
 teaching_assistants:
-  - name: Shruti Sriram 
+  - name: Tianming Wu 
     profile_pic: /_images/pp/ta.jpg
-    webpage: https://shruti-sriram.netlify.app/
