--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-course_name: CS 347 Data Management
-course_semester: "Fall 2024"
+course_name: CS 378 Database System Design
+course_semester: "Spring 2026"
 
-baseurl: "/cs347-fall24" # the subpath of your site, e.g. /blog/
-url: "http://ut-datasys.github.io/" # the base hostname & protocol for your site
+baseurl: "/cs378-spring26" # the subpath of your site, e.g. /blog/
+url: "https://ut-db-teaching.github.io/" # the base hostname & protocol for your site
 
 # schoolname: "UTCS"
 # schoolurl: "https://www.cs.utexas.edu/"
